# tauri-plugin-safe-area-insets

./: Cargo.toml  package.json
android/src/main/java/: ExamplePlugin.kt  InsetPlugin.kt
examples/tauri-app/: index.html  package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json  mobile.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/Sources/: ExamplePlugin.swift
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs
