[package]
name = "tauri-plugin-safe-area-insets"
version = "0.1.0"
authors = [ "Ronald <ronald.goedeke@icloud.com>" ]
description = "Tauri plugin for android safe area insets."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-safe-area-insets"
license = "MIT OR Apache-2.0"

[dependencies]
tauri = { version = "2.1.0" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.0.2", features = ["build"] }
